--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -25,3 +25,11 @@
     しかし一部では黄老思想に基づいた理解ができるにも関わらず、自身の実践経験に基づき本文と異なった注をつけているところもあり、それは魏晋期から始まる訓詁学の流れの先駆と言える。
     あくまで本文の思想に寄り添い、実例による具体化を行わず哲学的に論じたことが、『孫子』が『魏武注孫子』で読まれ続けた理由といえる。
     孫子の思想をシントピカル読書でまとめたわけやなこれは。すごすぎ。
+- date: 2025-04-04
+  bookTitle: 魏武注孫子
+  pages: 291 ~ 293
+  notes: |
+    解題 『孫子』の諸本。
+    本書の底本となった孫子の版本をはじめ、中国伝来のものなど含めた版本について。
+    また参考文献では、文献ごとの特徴を含めた簡単な解説がなされている。
+    本書と合わせて読みたくなるようなものもあり興味深い。
