--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -33,3 +33,12 @@
     本書の底本となった孫子の版本をはじめ、中国伝来のものなど含めた版本について。
     また参考文献では、文献ごとの特徴を含めた簡単な解説がなされている。
     本書と合わせて読みたくなるようなものもあり興味深い。
+- date: 2025-04-05
+  bookTitle: 魏武注孫子
+  pages: 294 ~ 301
+  notes: |
+    解題 曹操の生涯。
+    曹操の存在により三国時代が転換期となった。
+    400 年続いた漢が崩壊し、隋唐率亮太伊勢につながる屯田制等の土地・税制度が整備され、儒教一尊は崩壊し仏教・道教が盛んとなり、文学・書画が新たな価値として定着した。
+    曹操自身『孫子』に注をつけ『兵書接要』を著し、また詩人としても名を馳せたのもあり、その影響が大きかろうな。
+    これにて本書は終わり。
