--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -53,3 +53,6 @@
   bookTitle: ピクルスと漬物の歴史
   bookAuthor: Jan Davison, 甲斐理恵子
   previouslyRead: true
+- id: hard-to-break
+  bookTitle: 習慣と脳の科学
+  bookAuthor: Russel A. Poldrack, 神谷之康, 児島修
