--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -42,3 +42,12 @@
     400 年続いた漢が崩壊し、隋唐率亮太伊勢につながる屯田制等の土地・税制度が整備され、儒教一尊は崩壊し仏教・道教が盛んとなり、文学・書画が新たな価値として定着した。
     曹操自身『孫子』に注をつけ『兵書接要』を著し、また詩人としても名を馳せたのもあり、その影響が大きかろうな。
     これにて本書は終わり。
+- date: 2025-04-06
+  bookTitle: 習慣と脳の科学
+  pages: i ~ vii, 249 ~ 259
+  notes: |
+    自分自身習慣化すると苦も無く継続できるのでその仕組みに興味があった。
+    本編を読む前に監訳者解説とも目次を読んだ。
+    当初は一般書にあるようなファストアンドスロー的な単純な二分化された説明でなく、習慣の観点から人間の行動を司る複雑な仕組みを、従来の研究の再現性が低いことも踏まえて丹念に繙くらしい。
+    また原著者の紹介。実績があるだけでなくブラックボックス的な研究に透明性をもたらすオープンサイエンスの旗手でもあるらしい。
+    専門用語が多くその点ピンとこないが、解説はかなり読みやすい印象を得た。
