--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -51,3 +51,16 @@
     当初は一般書にあるようなファストアンドスロー的な単純な二分化された説明でなく、習慣の観点から人間の行動を司る複雑な仕組みを、従来の研究の再現性が低いことも踏まえて丹念に繙くらしい。
     また原著者の紹介。実績があるだけでなくブラックボックス的な研究に透明性をもたらすオープンサイエンスの旗手でもあるらしい。
     専門用語が多くその点ピンとこないが、解説はかなり読みやすい印象を得た。
+- date: 2025-04-07
+  bookTitle: 習慣と脳の科学
+  pages: 1 ~ 10
+  notes: |
+    第Ⅰ部 習慣の機械 なぜ人は習慣から抜け出せないのか
+    第一章 習慣とはなにか？
+    習慣が持つ強固な持続性という特性が、いかに人間の行動を変えるのを難しくし、また生きていく上で必要なものか。
+    技能は一度習得すれば自動化される点で習慣と似ている。
+    肉体の習慣もあれば心の習慣もある。有害となりうるものであれば強迫性障害がそう。
+    習慣には当初の目的や意図から離れていく特徴があり、習慣のメカニズムを知る上で大きな鍵になっていることがわかってきた。
+    アンソニー・ディキンソンのラットを用いた研究では、目的指向型と刺激反応型の行動があり、後者が習慣。
+    刺激が現れると自動的に反応し、目標に関係なく実行される特徴を持つ。
+    ちょっと読んだだけでも自分の中で意識してなかったことが目白押しで実に良い。
