--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -64,3 +64,13 @@
     アンソニー・ディキンソンのラットを用いた研究では、目的指向型と刺激反応型の行動があり、後者が習慣。
     刺激が現れると自動的に反応し、目標に関係なく実行される特徴を持つ。
     ちょっと読んだだけでも自分の中で意識してなかったことが目白押しで実に良い。
+- date: 2025-04-08
+  bookTitle: 習慣と脳の科学
+  pages: 11 ~ 17
+  notes: |
+    世界には安定と変化の側面があり、安定した側面は自動化したいが、脳はその両者を区別できない。
+    「安定性と可塑性のジレンマ」という用語で表現され、その解決策として習慣が果たす役割を説明する。
+    本書の構成について。
+    Ⅰ部は習慣とは何か、科学的に何を意味し、脳のどの部分で発生するかを説明する。
+    Ⅱ部は行動変容について。如何に習慣を変えることがが難しいか、科学的な裏付けのもとに深く理解していく。
+    簡単なコツでなく科学的な裏付けがある理解とアイデア、というあたりそうそうこれこれという感じで嬉しい。
