--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -56,7 +56,7 @@
   pages: 1 ~ 10
   notes: |
     第Ⅰ部 習慣の機械 なぜ人は習慣から抜け出せないのか
-    第一章 習慣とはなにか？
+    第 1 章 習慣とはなにか？
     習慣が持つ強固な持続性という特性が、いかに人間の行動を変えるのを難しくし、また生きていく上で必要なものか。
     技能は一度習得すれば自動化される点で習慣と似ている。
     肉体の習慣もあれば心の習慣もある。有害となりうるものであれば強迫性障害がそう。
@@ -74,3 +74,13 @@
     Ⅰ部は習慣とは何か、科学的に何を意味し、脳のどの部分で発生するかを説明する。
     Ⅱ部は行動変容について。如何に習慣を変えることがが難しいか、科学的な裏付けのもとに深く理解していく。
     簡単なコツでなく科学的な裏付けがある理解とアイデア、というあたりそうそうこれこれという感じで嬉しい。
+- date: 2025-04-09
+  bookTitle: 習慣と脳の科学
+  pages: 18 ~ 33
+  notes: |
+    第 2 章 脳が習慣を生み出すメカニズム。
+    習慣は意識的な記憶と切り離されている。これは脳には複数の記憶システムがあるため。
+    重度の記憶障害でも技能を習得できることから、習慣や技能の習得には別のシステムが関わっている。
+    マクリーンに始まる、人間の習慣が"爬虫類脳"によるという考えは、現在否定されているが、大脳基底核が技能習得に関わっているという初期の証拠になった。
+    大脳基底核は尾状核・被殻・側坐核・淡蒼球・視床下核・黒質・腹側被蓋野など、脳の中央の様々な場所に位置するが相互に深く結びついているため一つのものとして扱われる。
+    大脳基底核の信号を送る経路と仕組みはそういうもんなのかという暗記物。
