--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -84,3 +84,15 @@
     マクリーンに始まる、人間の習慣が"爬虫類脳"によるという考えは、現在否定されているが、大脳基底核が技能習得に関わっているという初期の証拠になった。
     大脳基底核は尾状核・被殻・側坐核・淡蒼球・視床下核・黒質・腹側被蓋野など、脳の中央の様々な場所に位置するが相互に深く結びついているため一つのものとして扱われる。
     大脳基底核の信号を送る経路と仕組みはそういうもんなのかという暗記物。
+- date: 2025-04-10
+  bookTitle: 習慣と脳の科学
+  pages: 33 ~ 38
+  notes: |
+    大脳基底核の経路には直接路と間接路があり、直接路は行動や思考を開始し、間接路は行動や思考を抑制する。
+    関節路は視床下核を介することで抑制的な信号を送る。
+    この経路の違いにはドーパミンが関わっている。多くは黒質・腹側被蓋野で作られ、特に大脳基底核への投射が多い。
+    「神経調整性」の神経伝達物質であり、直接的にでなくニューロンへの他の興奮性・抑制性の入力の効果を調整する。ギターアンプのボリュームのようなもの。
+    ドーパミンは「可塑性」と呼ばれる経験による脳の変化にも関わっている。
+    ドーパミン受容体は興奮性を高める D1 型と興奮性を抑える D2 型があり、直接路は D1 型を、間接路は D2 型を発現する。
+    この違いの存在は長年議論の対象だったが「オプトジェネティクス」によって違いの存在を示す強力な証拠が得られるようになってきた。
+    未だ暗記物が続くが登場人物が増えてきて解像度は上がってきたような。
