--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -96,3 +96,14 @@
     ドーパミン受容体は興奮性を高める D1 型と興奮性を抑える D2 型があり、直接路は D1 型を、間接路は D2 型を発現する。
     この違いの存在は長年議論の対象だったが「オプトジェネティクス」によって違いの存在を示す強力な証拠が得られるようになってきた。
     未だ暗記物が続くが登場人物が増えてきて解像度は上がってきたような。
+- date: 2025-04-11
+  bookTitle: 習慣と脳の科学
+  pages: 38 ~ 46
+  notes: |
+    オプトジェネティクスは、光受容タンパク質を分子生物学の手法で極めて正確にニューロンへ挿入することで、光によってニューロンを興奮させたり抑制したりできるようになった。
+    これにより、なぜハンチントン病やパーキンソン病のような体の制御に支障をきたすメカニズムが解明されてきている。
+    ドーパミンが引き起こす様々な作用の中で習慣の形成に関わるのはシナプス可塑性で、経験によりシナプスの強度が変化することで他のニューロンを刺激する力が強くなったり弱くなったりするプロセス。
+    三因子ルールという可塑性調整でドーパミンが重要な役割をする。ドーパミンが存在するとシナプスが強まり、存在しないと弱まる。
+    ヴォルフラム・シュルツの研究により、ドーパミンニューロンが敏感なのは報酬ではなく、予測と予測の誤差であることがわかってきた。
+    これは機械学習における強化学習の考え方と一致し、ドーパミンの働きを数学的理論に基づいて理解できることを示した。
+    突然のコンピューターサイエンスでびっくりしたがそうつながるか。興味深いな。
