--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -117,3 +117,16 @@
     ドーパミンを阻害されたラットは意欲が減衰することがわかっており、ベリッジとロビンソンはインセンティブサリエンシー(insentive saliency)と呼ぶ。
     人間がある時点でどのように行うべきか判断するのに大脳基底核とドーパミンが関連すると考えられている。
     話が逸れるが「実験動物は何度も実験を経験してるからレバーは押すものだと知っている」というのは考えたことなかった。バイアスやなあ。
+- date: 2025-04-13
+  bookTitle: 習慣と脳の科学
+  pages: 54 ~ 61
+  notes: |
+    第 3 章 一度習慣化すれば、いつまでも続く
+    マーク・ブートンの研究により過去に学習された習慣は一度失われたと見えてもまた戻る事がわかっている。「自然回復」「復元」「復活」といわれる。
+    実際には古い習慣を忘れるのではなく、新しい習慣が現れやすいように古い習慣を抑制していると考えられる。
+    この事実から、恐怖症・ PTSD ・ 強迫性障害などの治療において重要な効果があることを示した。この種の治療法に「曝露療法」がある。
+    クラスケの研究では、習慣が学習されたコンテクストに特化したものになることを示しており、様々なコンテクストで曝露療法を行うことで、より効果的な治療ができることを示している。
+    インとノールトンは目標指向型(行動-結果型)は習慣学習がどのように進行するか理解する枠組みを構築した。
+    始めに背外側前頭前野と尾状核を結ぶ「認知」皮質線条体ループから始まり、時間の経過とともに運動皮質と被殻を含む「運動」回路が習慣を学習し始め、最初の認知経路に取って代わる。
+    この移行にはドーパミンが関わっている。このようにして運動システムに習慣が定着すると無自覚で行動を起こすようになる。
+    ここはキーワード覚えきれず難しかったのでまた読む必要がある...
