--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -130,3 +130,16 @@
     始めに背外側前頭前野と尾状核を結ぶ「認知」皮質線条体ループから始まり、時間の経過とともに運動皮質と被殻を含む「運動」回路が習慣を学習し始め、最初の認知経路に取って代わる。
     この移行にはドーパミンが関わっている。このようにして運動システムに習慣が定着すると無自覚で行動を起こすようになる。
     ここはキーワード覚えきれず難しかったのでまた読む必要がある...
+- date: 2025-04-14
+  bookTitle: 習慣と脳の科学
+  pages: 61 ~ 67
+  notes: |
+    習慣は一つでなく一連の行動で構成されていることが多い。
+    これは習慣的な行動を起こすときにどのようなアクションスリップ(日常的な目標行動で生じるうっかりミス)を起こすかを見ても顕著である。
+    グレイビエルの研究では、一度習慣が形成されると、線条体と前頭前野が協力して一連の行動の流れをまとまった行動単位に変えるため、一度始まると途中で止めるのが難しいことを示している。
+    パブロフ型学習は特定の刺激が価値のある結果に結びついたときに起こる。
+    道具的学習とは特定の状況や刺激に対して特定の行動を取るよう学習することをいう。
+    パブロフ型学習から道具的学習への転移とは、パブロフ型学習によって結果と結びついた刺激が道具的学習で獲得した行動を引き起こすことをさす。
+    これは、禁煙中の人が喫煙する人を見たり煙の匂いで喫煙衝動に駆られるように、特に悪い習慣を呼び起こすことにおいて大きな役割を果たすと考えられている。
+    このメカニズムにおいて、 DREADD という手法でドーパミンのシグナル伝達を側坐核で阻害すると転移が減少することから、側坐核のドーパミンが中心的な役割を果たしていると考えられている。
+    難しいけどここは非常に面白い。
