--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -143,3 +143,13 @@
     これは、禁煙中の人が喫煙する人を見たり煙の匂いで喫煙衝動に駆られるように、特に悪い習慣を呼び起こすことにおいて大きな役割を果たすと考えられている。
     このメカニズムにおいて、 DREADD という手法でドーパミンのシグナル伝達を側坐核で阻害すると転移が減少することから、側坐核のドーパミンが中心的な役割を果たしていると考えられている。
     難しいけどここは非常に面白い。
+- date: 2025-04-15
+  bookTitle: 習慣と脳の科学
+  pages: 67 ~ 72
+  notes: |
+    ケモジェネティクスの手法の一つとして DREADD(デザイナードラッグによってのみ活性化すされるデザイナー受容体/Designer Reseptors Exclusively Activated by Designer Drugs) がある。
+    オプトジェネティクスと違い効果が出るまでに数十分かかるがその後数時間持続することもあり、長い時間枠での研究に有効であり、薬剤の注射のみで実施できる。
+    依存症の場合、依存対象の視覚的な手がかりに強い注意バイアスを持つのがストループ課題で実証されている。
+    つまり、ある種の習慣の手がかりはパブロフ型学習から道具的学習への遷移だけでなく、その個人にとってのサリエンシーが増大することによって、習慣を誘発しやくなる。
+    アンダーソンはこの依存症の注意バイアスは「価値駆動的な注意捕捉」という基本的な心理メカニズムと多くの類似点があることを主張している。
+    サリエンシーがわからなかったので調べた。感覚刺激がボトムアップ性注意を誘引する特性を指すらしい。ボトムアップ注意は視覚刺激そのもので引き起こされる受動的な注意過程らしく、要は周囲より顕著に目立つものに注意を惹かれることみたい。言葉むずー。
