--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -153,3 +153,14 @@
     つまり、ある種の習慣の手がかりはパブロフ型学習から道具的学習への遷移だけでなく、その個人にとってのサリエンシーが増大することによって、習慣を誘発しやくなる。
     アンダーソンはこの依存症の注意バイアスは「価値駆動的な注意捕捉」という基本的な心理メカニズムと多くの類似点があることを主張している。
     サリエンシーがわからなかったので調べた。感覚刺激がボトムアップ性注意を誘引する特性を指すらしい。ボトムアップ注意は視覚刺激そのもので引き起こされる受動的な注意過程らしく、要は周囲より顕著に目立つものに注意を惹かれることみたい。言葉むずー。
+- date: 2025-04-16
+  bookTitle: 習慣と脳の科学
+  pages: 73 ~ 78
+  notes: |
+    第 4 章 「私」を巡る戦い。
+    行動を決定する脳内の複数のシステムについて。
+    神経系の原始的な部分に依存する反射。その正反対がこれまでに出た目標思考行動。
+    習慣はその 2 つの間に位置し、目標思考行動であった行動が何度も繰り返されて自動化したもの。
+    止めるのが不可能な反射と違い、十分な努力と意識で止めることが可能。
+    パッカードは「プラス迷路」と呼ばれる実験装置で、目標指向行動と習慣的行動が競合していることを示した。具体的にはラットの海馬の機能を停止させると反応行動(習慣的行動)、大脳基底核の機能を停止させると場所学習(目標指向行動)をするようになった。
+    努力と意思で習慣を止められると出たのはここが初めてか。まだ具体的に触れられてないが。
