--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -164,3 +164,11 @@
     止めるのが不可能な反射と違い、十分な努力と意識で止めることが可能。
     パッカードは「プラス迷路」と呼ばれる実験装置で、目標指向行動と習慣的行動が競合していることを示した。具体的にはラットの海馬の機能を停止させると反応行動(習慣的行動)、大脳基底核の機能を停止させると場所学習(目標指向行動)をするようになった。
     努力と意思で習慣を止められると出たのはここが初めてか。まだ具体的に触れられてないが。
+- date: 2025-04-17
+  bookTitle: 習慣と脳の科学
+  pages: 78 ~ 80
+  notes: |
+    著者ポルドラックの fMRI による脳画像を使った研究により、試行錯誤型の学習では大脳基底核(習慣的記憶システム)が、対連合型の学習では側頭葉内側(宣言的記憶システム)の活動が大きいことがわかった。
+    また片方の活動が上がるともう片方が下がるという、互いのシステムが競合しているというパッカードの見解を裏付ける結果が得られた。
+    その後ドーパミンのシグナル伝達に障害があるパーキンソン病患者も、試行錯誤型でなく対連合型の学習でならはるかに簡単に学習できることがわかった。
+    計測できることで次々と裏付けが得られたというのはすごいな。
