--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -172,3 +172,15 @@
     また片方の活動が上がるともう片方が下がるという、互いのシステムが競合しているというパッカードの見解を裏付ける結果が得られた。
     その後ドーパミンのシグナル伝達に障害があるパーキンソン病患者も、試行錯誤型でなく対連合型の学習でならはるかに簡単に学習できることがわかった。
     計測できることで次々と裏付けが得られたというのはすごいな。
+- date: 2025-04-18
+  bookTitle: 習慣と脳の科学
+  pages: 80 ~ 88
+  notes: |
+    1950 年代に始まる AI の研究について。始めは医療やチェスのような難しい推論をさせようとしたがうまくいかなかった。後に人間に近い方法で学習する機械学習であり、その中でも深層学習が大きな成果を上げている。
+    教師あり学習・教師なし学習・それらの中間の強化学習の 3 つの学習方法がある。
+    強化学習以前から心理学者は学習の仕組みを研究していた。
+    「効果の法則」「パブロフ型学習」「ブロッキング」や報酬の予測の誤差と全く同じ考え方からなる「エラー駆動学習」等。
+    強化学習の数理モデルの主要な構成要素に「ポリシー」「探索」「報酬信号」がある。
+    ポリシーで一般的なのはソフトマックス。
+    ドーパミンニューロンの活動と強化学習モデルの振る舞いの強い数学的関係を見出したように、計算機科学のモデルで脳の仕組みを解明しようとする計算神経科学という分野がある。
+    急に AI 出て馴染みある言葉が並んでびっくりした。計算神経科学という名はこの本で初めて知った。
