--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -184,3 +184,13 @@
     ポリシーで一般的なのはソフトマックス。
     ドーパミンニューロンの活動と強化学習モデルの振る舞いの強い数学的関係を見出したように、計算機科学のモデルで脳の仕組みを解明しようとする計算神経科学という分野がある。
     急に AI 出て馴染みある言葉が並んでびっくりした。計算神経科学という名はこの本で初めて知った。
+- date: 2025-04-19
+  bookTitle: 習慣と脳の科学
+  pages: 88 ~ 94
+  notes: |
+    前述のはモデルフリー強化学習で、組み合わせの爆発のような次元の呪いや外界の変化に弱い。ただ習慣の仕組みはよく表している。
+    これに対し構造の知識を利用するのがモデルベース強化学習で、人間の行動の多くはこれに該当する。
+    ナサニエル・ドーはこの 2 種類の学習が人間の脳でどのように機能しているかを研究、「二段階課題」という手法を開発した。
+    多くの研究では人はモデルベース強化学習とモデルフリー強化学習の使い分けに個体差があることがわかっている。
+    またそれは安定しておらず、気が散る状態ではモデルフリー制御、集中した状態ではモデルべース制御が行われると行った、特定の状況要因が影響していると示す証拠もある。
+    これ面白いな。強化学習との関連もさることながら、集中度合いで行き当たりばったりな学習はしがちというのは、実感を伴う気がする。
