--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -194,3 +194,10 @@
     多くの研究では人はモデルベース強化学習とモデルフリー強化学習の使い分けに個体差があることがわかっている。
     またそれは安定しておらず、気が散る状態ではモデルフリー制御、集中した状態ではモデルべース制御が行われると行った、特定の状況要因が影響していると示す証拠もある。
     これ面白いな。強化学習との関連もさることながら、集中度合いで行き当たりばったりな学習はしがちというのは、実感を伴う気がする。
+- date: 2025-04-20
+  bookTitle: 習慣と脳の科学
+  pages: 95 ~ 97
+  notes: |
+    薬物依存症のように、目標も習慣的になり得るという考えに関心が集まっている。
+    クッシュマンはドーの二段階課題を応用して、モデルベースの学習は習慣を選択する可能性があり、モデルフリーの学習は目標状態に設定する価値に影響を与え可能性があることを示唆した。
+    これは中々恐ろしいな。目標設定した価値がランダムな要素で歪んでいる可能性があるということか。もしこの目標が習慣化してしまったら上書きでしか書き換えられないし難儀や。
