--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -201,3 +201,13 @@
     薬物依存症のように、目標も習慣的になり得るという考えに関心が集まっている。
     クッシュマンはドーの二段階課題を応用して、モデルベースの学習は習慣を選択する可能性があり、モデルフリーの学習は目標状態に設定する価値に影響を与え可能性があることを示唆した。
     これは中々恐ろしいな。目標設定した価値がランダムな要素で歪んでいる可能性があるということか。もしこの目標が習慣化してしまったら上書きでしか書き換えられないし難儀や。
+- date: 2025-04-21
+  bookTitle: 習慣と脳の科学
+  pages: 98 ~ 105
+  notes: |
+    第 5 章 自制心―人間の最大の力？
+    人の心の中の欲求と自制については、古くはプラトンが「パイドロス」で触れ、この二面性を最も有名にしたのはフロイトの著作である。
+    心理学では自制心は人生の重要な成果の多くに強い影響を与えると考えており、それは計画性や動機づけ、集中力、快楽追求、抑制などの心理的機能に関連しているとみなせる。そしてこれらは人間が独自に進化させた脳の領域である前頭前野に関係している。
+    事故・ロボトミー手術等の脳障害などで前頭前野が損傷した人は、社会的・感情的な機能障害や、判断力の低下、優柔不断、社会的な不適切な行為などの「実行機能不全」をといった、自制心を欠くようになった事例が見られる。
+    またこれらとは逆に脳損傷後に性格が改善するプラスの影響が見られることもあり、その場合は前頭葉の一番前方に損傷がある人が多いことがわかっている。
+    ロボトミー知ってたがここに関連してくるのか、恐ろしい。
