--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -211,3 +211,15 @@
     事故・ロボトミー手術等の脳障害などで前頭前野が損傷した人は、社会的・感情的な機能障害や、判断力の低下、優柔不断、社会的な不適切な行為などの「実行機能不全」をといった、自制心を欠くようになった事例が見られる。
     またこれらとは逆に脳損傷後に性格が改善するプラスの影響が見られることもあり、その場合は前頭葉の一番前方に損傷がある人が多いことがわかっている。
     ロボトミー知ってたがここに関連してくるのか、恐ろしい。
+- date: 2025-04-22
+  bookTitle: 習慣と脳の科学
+  pages: 105 ~ 109
+  notes: |
+    前頭前野が自制心に重要な役割を果たすのはなぜか。
+    脳の一次領域は五感など特定の感覚モダリティからの入力の処理や、運動を制御のための出力の直接的な生成に特化していて、さながら脳と外界のゲートウェイと言える。
+    連合領域は一次領域からの情報を統合する。単一の感覚モダリティを扱うユニモーダルと複合した感覚モダリティを扱うヘテロモーダルがある。
+    前頭前野はその中でも最上位のヘテロモーダルの連合領域であり、脳が利用できるあらゆる情報の概要にアクセスできる。
+    前頭前野は人と他の霊長類で大きさにさほど違いはないが、人の場合は抽象的な思考に関わる領域が相対的に大きい、また脳の配線である白線の大きさに違いがあると考えられている。
+    しかしそれほど顕著な差でないので、ニューロンにおける組織化の微細な違いではないかとも考えられている。
+    このように具体的な大きな違いをもたらす仕組みは完全に解明されていない。
+    脳がパーツで構成されてるような感じで解像度が高まるな～。
