--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -223,3 +223,14 @@
     しかしそれほど顕著な差でないので、ニューロンにおける組織化の微細な違いではないかとも考えられている。
     このように具体的な大きな違いをもたらす仕組みは完全に解明されていない。
     脳がパーツで構成されてるような感じで解像度が高まるな～。
+- date: 2025-04-22
+  bookTitle: 習慣と脳の科学
+  pages: 109 ~ 113
+  notes: |
+    白質の画像化する手法は、マイク・モーズリーは拡散強調 MRI という技術を用いたのに始まる。
+    水分子がどの方向にも拡散する運動は等方性と呼ばれ、軸索の中の水分子のように特定の方向に拡散する運動は異方性と呼ばれる。
+    代表的な手法は拡散テンソル画像法と呼ばれ、拡散が等方的か異方的か定量的に決められる異方性比率という指標を算出でき、白質の構造が脳にどう関連しているか理解するのに役立つ。
+    ゴールドマン＝ラキッチの「眼球運動を用いた遅延反応課題」により、ドーパミンがワーキングメモリにとって極めて重要であること、ワーキングメモリに情報を保持しているとき活性化するニューロンがあることを明らかにした。
+    しかしアール・ミラーの研究では、より複雑な課題になるとニューロンが持続的に発火しない事がわかっている。
+    どのように情報が保持されるかについては紆余曲折あるが、ワーキングメモリに前頭前野のニューロンが不可欠であることは明らか。
+    はじめ字面だけだと猿の実験がワーキングメモリに関するものだと読んでる途中なわからなかったわ。でもセクション最後まで読めばわかった(多分)。
