--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -234,3 +234,14 @@
     しかしアール・ミラーの研究では、より複雑な課題になるとニューロンが持続的に発火しない事がわかっている。
     どのように情報が保持されるかについては紆余曲折あるが、ワーキングメモリに前頭前野のニューロンが不可欠であることは明らか。
     はじめ字面だけだと猿の実験がワーキングメモリに関するものだと読んでる途中なわからなかったわ。でもセクション最後まで読めばわかった(多分)。
+- date: 2025-04-23
+  bookTitle: 習慣と脳の科学
+  pages: 113 ~ 118
+  notes: |
+    ノルアドレナリンを分泌する青斑核は特に前頭前野に接続しており、ドーパミン同様ワーキングメモリに重要な役割を果たすと考えられている。
+    アドレナリンもノルアドレナリンもカテコールアミンの一種だ。
+    カテコールアミンは眠いときのレベルが低い状態、極度のストレス下の高い状態のいずれでもなく、前頭前野にとってちょうどいいレベルである必要があり、逆 U 字型の関係があるとアーンステンは主張する。
+    この関係はヤーキーズ・トットソンの法則の根底にあると考えられている。
+    これは覚醒状態が前頭前野の機能に影響を与えることを部分的に説明している。高すぎるレベルのノルアドレナリンはα2A 受容体だけでなくα1受容体にも作用し、前頭前野のニューロンの発火を抑制しワーキングメモリのパフォーマンスを低下させる。
+    また、適切なレベルに調整する必要があるのはドーパミンも同じであることがわかっている。
+    ノルアドレナリンも関係するのかー。となるとその後のコルチゾールも関係するのかな。サプリで培った知識が活かせる。ま、先を読めばわかるか。
