--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -114,7 +114,7 @@
     カルシウムイメージングは、脳内のドーパミンニューロン等に活性化するたびに蛍光強度が変わるタンパク質の遺伝子を挿入することで、多くのニューロンの活動を一度に画像夏できるようにした。
     2019 年のウィッテンのマウスを使った仮想現実の手法を用いた研究により、ドーパミンユーロンが予測と予測の誤差に敏感であることが裏付けされ、更には他に反応するものがあるとわかった。
     世間一般に言われるドーパミンと快楽の関連は実際には直接はなく、むしろ動機づけが中心の枠割であるとみなされるようになっている。
-    ドーパミンを阻害されたラットは意欲が減衰することがわかっており、ベリッジとロビンソンはインセンティブサリエンシー(insentive saliency)と呼ぶ。
+    ドーパミンを阻害されたラットは意欲が減衰することがわかっており、ベリッジとロビンソンはインセンティブサリエンシー(incentive saliency)と呼ぶ。
     人間がある時点でどのように行うべきか判断するのに大脳基底核とドーパミンが関連すると考えられている。
     話が逸れるが「実験動物は何度も実験を経験してるからレバーは押すものだと知っている」というのは考えたことなかった。バイアスやなあ。
 - date: 2025-04-13
