--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -245,3 +245,10 @@
     これは覚醒状態が前頭前野の機能に影響を与えることを部分的に説明している。高すぎるレベルのノルアドレナリンはα2A 受容体だけでなくα1受容体にも作用し、前頭前野のニューロンの発火を抑制しワーキングメモリのパフォーマンスを低下させる。
     また、適切なレベルに調整する必要があるのはドーパミンも同じであることがわかっている。
     ノルアドレナリンも関係するのかー。となるとその後のコルチゾールも関係するのかな。サプリで培った知識が活かせる。ま、先を読めばわかるか。
+- date: 2025-04-25
+  bookTitle: 習慣と脳の科学
+  pages: 118 ~ 124
+  notes: |
+    ウォルター・ミシェルのマシュマロ実験として知られる子どもを対象にした一連の研究で、誘惑が目の前にあるほど抗い難く、また満足遅延能力が高いほどその後の人生の成果にポジティブな結果をもたらす事がわかった。ただしサンプルサイズが小さ過ぎることは研究者自身認めていた。
+    満足遅延能力とその後の人生の成果の関係は明らかだが、米国国立小児保健・人間発達研究所が実施した「初期発達における保育の質と子どもの発達に関する研究(Study of Early Child Care and Youth Development SECCYD)」と呼ばれる研究に基づいた大規模なデータセットを用いた 2 件の重要な研究において、その関係を生み出す要因が社会的な要因等他にも存在し、分解して考えることが極めて困難であることを示した。
+    変数が多くて単純化できないんやな。
