--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -252,3 +252,13 @@
     ウォルター・ミシェルのマシュマロ実験として知られる子どもを対象にした一連の研究で、誘惑が目の前にあるほど抗い難く、また満足遅延能力が高いほどその後の人生の成果にポジティブな結果をもたらす事がわかった。ただしサンプルサイズが小さ過ぎることは研究者自身認めていた。
     満足遅延能力とその後の人生の成果の関係は明らかだが、米国国立小児保健・人間発達研究所が実施した「初期発達における保育の質と子どもの発達に関する研究(Study of Early Child Care and Youth Development SECCYD)」と呼ばれる研究に基づいた大規模なデータセットを用いた 2 件の重要な研究において、その関係を生み出す要因が社会的な要因等他にも存在し、分解して考えることが極めて困難であることを示した。
     変数が多くて単純化できないんやな。
+- date: 2025-04-26
+  bookTitle: 習慣と脳の科学
+  pages: 124 ~ 130
+  notes: |
+    異時点間選択テストは、今すぐ得られる報酬と後で得られるより多い報酬の組合せを提示する。このとき人は経済学的な判断よりも目先の報酬を重視する傾向がある。
+    人の忍耐強さは将来の報酬をどれだけ早く割り引くかを示す k 値で定量化される。 k 値の個人差は大きく、 2 万人以上を対象にした研究では 1000 倍以上もの差があった。我慢強い人ほど遅延割引率が低い。
+    遅延割引率はマシュマロ課題同様に貧困による欠乏状態など環境要因の影響を受ける。
+    また一卵性双生児と二卵性双生児では前者の方が遅延割引率が似ていることから遺伝的要因が示唆され、ドーパミン機能に関する遺伝子の関与が推定されるが、小規模な研究で再現性がないものが多く、また唯一大規模なゲノムワイド関連解析では個人によって違いがあることをほとんど説明できなかった。
+    遅延割引率もマシュマロ課題同様に人生の結果と関係がある。薬物依存症者は大幅に早く割引することが知られている。ただし関連はあれど依存症の行動マーカーとするには十分な証拠がなく危険なラベリングとなる。
+    ゲノムワイド関連解析のとこに最近破産した 23andMe 社載っててびっくりした。この本は漏洩する前に出てるからな。
