--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -262,3 +262,12 @@
     また一卵性双生児と二卵性双生児では前者の方が遅延割引率が似ていることから遺伝的要因が示唆され、ドーパミン機能に関する遺伝子の関与が推定されるが、小規模な研究で再現性がないものが多く、また唯一大規模なゲノムワイド関連解析では個人によって違いがあることをほとんど説明できなかった。
     遅延割引率もマシュマロ課題同様に人生の結果と関係がある。薬物依存症者は大幅に早く割引することが知られている。ただし関連はあれど依存症の行動マーカーとするには十分な証拠がなく危険なラベリングとなる。
     ゲノムワイド関連解析のとこに最近破産した 23andMe 社載っててびっくりした。この本は漏洩する前に出てるからな。
+- date: 2025-04-27
+  bookTitle: 習慣と脳の科学
+  pages: 130 ~ 134
+  notes: |
+    神経科学と経済学の分野では、衝動的な脳のシステムと理性的な脳のシステムが競合しているとい考え方が二重システム理論として知られる。
+    1 つ目は目標を無視して即時的に報酬を得ようとするシステムで側坐核・副内側前頭前野・ドーパミン系など報酬が関わる脳領域と関連する。
+    2 つ目は合理的で目標思考で忍耐強いシステムで外側前頭前野と関連し、ワーキングメモリに情報を保存し、気が散らないようにする・将来の行動を計画する・望ましくない行動を抑制する等の自制心の基本になると考えられている。
+    2 つの脳システムの競合はベータ‐デルタモデルと呼ばれる二重システムモデルの研究で示されたが、のちの研究で強く批判される。
+    しかし外側前頭前野の機能が異時点間選択課題において性急になる傾向をコントロールする役割を果たすことは裏付けられている。
