--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -271,3 +271,14 @@
     2 つ目は合理的で目標思考で忍耐強いシステムで外側前頭前野と関連し、ワーキングメモリに情報を保存し、気が散らないようにする・将来の行動を計画する・望ましくない行動を抑制する等の自制心の基本になると考えられている。
     2 つの脳システムの競合はベータ‐デルタモデルと呼ばれる二重システムモデルの研究で示されたが、のちの研究で強く批判される。
     しかし外側前頭前野の機能が異時点間選択課題において性急になる傾向をコントロールする役割を果たすことは裏付けられている。
+- date: 2025-04-28
+  bookTitle: 習慣と脳の科学
+  pages: 134 ~ 141
+  notes: |
+    人の衝動性を分類に関し、最も支持されるフレームワークでは、切迫性・忍耐力の欠如・計画性の欠如・刺激欲求性の 4 つに分ける。
+    回答者の答えからこれらの側面を因子分析と呼ばれる統計的手法で推論される。
+    衝動性も遅延割引率同様に遺伝的な要因があると考えられており、サンドラ・サンチェス＝ロイゲらと 23andMe の共同研究において遺伝的な相関がみられた。
+    しかし衝動性の脳のメカニズムはあまりわかっておらず、多くは 100 人未満の小規模な研究で、数千人単位のサンプルが得られないと信頼性の高い結果は得られない。
+    脳機能と衝動性について十分な検出力のある初めての研究はケント・キールらによる安静時 fMRI を用いた手法で、典型的な若年成人や衝動性の弱い犯罪は運動前野の実行制御に関わる他のネットワークが機能的に結合しており、衝動性の強い犯罪者では阻害されてることがわかった。
+    ダニエル・マルグリーズらの研究では忍耐力の欠如が前帯状皮質と外側前頭前野の結合性が弱いことがわかっており、脳の違いと衝動性の関連を完全に理解するにはさらなる研究が必要とされる。
+    いずれも機能的な結合によって自制心が機能するから子どもや一部の犯罪者のように脳の機能の連携が弱いと衝動的であるということでいいのかな。
