--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -282,3 +282,12 @@
     脳機能と衝動性について十分な検出力のある初めての研究はケント・キールらによる安静時 fMRI を用いた手法で、典型的な若年成人や衝動性の弱い犯罪は運動前野の実行制御に関わる他のネットワークが機能的に結合しており、衝動性の強い犯罪者では阻害されてることがわかった。
     ダニエル・マルグリーズらの研究では忍耐力の欠如が前帯状皮質と外側前頭前野の結合性が弱いことがわかっており、脳の違いと衝動性の関連を完全に理解するにはさらなる研究が必要とされる。
     いずれも機能的な結合によって自制心が機能するから子どもや一部の犯罪者のように脳の機能の連携が弱いと衝動的であるということでいいのかな。
+- date: 2025-04-29
+  bookTitle: 習慣と脳の科学
+  pages: 141 ~ 147
+  notes: |
+    反応抑制がうまく機能しないと、過食症や薬物依存症などの様々な障害と引き起こすと考えられている。
+    反応抑制はストップシグナル課題と呼ばれる実験で研究されてきた。人間が行動を中断するのに要する時間は 0.2 秒とわかっている。
+    ゴードン・ローガンはストップシグナル反応時間と呼ばれる数学的枠組みを開発し、抑制の成否がゴープロセスとストッププロセスの競争にかかっているというモデルを構築した。
+    また大脳基底核に前頭前野が視床下核を直接的に活性化できるハイパー直接路と呼ばれるルートが有り、これが行動の停止の関与していることがわかっている。
+    複雑やなあ。見取り図でもないと繋がりがわからなくなってきた。
