--- a/contents/booklogs/2025/2025-04.yml
+++ b/contents/booklogs/2025/2025-04.yml
@@ -291,3 +291,13 @@
     ゴードン・ローガンはストップシグナル反応時間と呼ばれる数学的枠組みを開発し、抑制の成否がゴープロセスとストッププロセスの競争にかかっているというモデルを構築した。
     また大脳基底核に前頭前野が視床下核を直接的に活性化できるハイパー直接路と呼ばれるルートが有り、これが行動の停止の関与していることがわかっている。
     複雑やなあ。見取り図でもないと繋がりがわからなくなってきた。
+- date: 2025-04-30
+  bookTitle: 習慣と脳の科学
+  pages: 147 ~ 150
+  notes: |
+    従来、目下の衝動を断つのが上手な人は意志力の強い人と考えられていた。
+    ところがストップシグナル反応時間(行動を停止するまでの時間を数値化したもの)と自記式調査法で測定される被験者の自制心の測定値の相関を計算したところ、ほぼ無関係であることがわかった。
+    ウィルヘルム・ホフマンらが「経験サンプリング法」で調べたところ、自制心の高い人は低い人に比べて葛藤が少なく欲求に抗う回数も少なかった。
+    ガラとダックワースによる研究では、自制心の高い人ほど日々の習慣を自動的に行っており、良い習慣を身につけるのが得意であると示している。
+    自制心の問題じゃないのか。葛藤や欲求への抵抗が少ないというのは何となく体感として理解できる。
+    衝動が起こりにくいというのはあるのかな。このあたりは次の章でわかるかな。
