--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -13,3 +13,14 @@
     高速スキャンサイクリックボルタンメトリーという手法では即時的な放出量は自然な報酬と大差なく、薬物が習慣化しやすいのは不自然に持続するという事実に関連していると考えられる。
     オプトジェネティクスツールの開発により、カール・ダイセロスの研究によるドーパミンと「条件付場け所指向性」の関連の実証、イラナ・ウィッテンの研究成果から、ドーパミン刺激が脅迫的な行動を起こす力を持つことが示された。
     これまでも散々ドーパミンって言葉見続けてきたがこの章はドーパミンの独壇場間違いなしやな。
+- date: 2025-05-02
+  bookTitle: 習慣と脳の科学
+  pages: 155 ~ 160
+  notes: |
+    乱用薬物が即時的・持続的に側坐核などの遺伝子発現にエピジェネティック(遺伝子発現を制御するよう)な変化をもたらす。
+    脳の可塑性に特に重要な転写因子は CREB (Cyclic AMP Response Element Binding protein)(サイクリック AMP 応答配列結合タンパク質)。
+    コカインへの曝露により成人の脳には殆ど見られないサイレントシナプスが生成され、永続的な薬物習慣の形成につながる可塑性メカニズムの一つとなる可能性がある。
+    また「耐性」として知られる薬物の影響を無効化して定常状態を維持しようとする脳の適応があり、時間の経過とともに薬物の摂取量を増加させる。
+    ボルコウによる初期の研究では陽電子放出断層撮影(Positron Emission Tomography)検査でドーパミン量を推定し、中毒者は対照群と比べて同程度のドーパミン反応を得るにはより多くの薬物刺激が必要になることを示した。
+    ベリッジとロビンソンは薬物乱用でインセンティブサリエンシー(incentive saliency)に過敏に反応するようになり薬物への強迫的な欲求から脅迫的に使用するようになることを挙げている。
+    脳が変質するってよく聞くしこの本でも目玉焼きの CM の話があったが、より複雑とはいえなるほどな。
