--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -24,3 +24,14 @@
     ボルコウによる初期の研究では陽電子放出断層撮影(Positron Emission Tomography)検査でドーパミン量を推定し、中毒者は対照群と比べて同程度のドーパミン反応を得るにはより多くの薬物刺激が必要になることを示した。
     ベリッジとロビンソンは薬物乱用でインセンティブサリエンシー(incentive saliency)に過敏に反応するようになり薬物への強迫的な欲求から脅迫的に使用するようになることを挙げている。
     脳が変質するってよく聞くしこの本でも目玉焼きの CM の話があったが、より複雑とはいえなるほどな。
+- date: 2025-05-03
+  bookTitle: 習慣と脳の科学
+  pages: 161 ~ 166
+  notes: |
+    トレヴァー・ロビンスとバリー・エバリットが依存症の発症には衝動性から強迫性への移行が伴うと提唱し注目を集めている。目標指向行動から習慣的行動への移行が観察できるという。
+    衝動性とドーパミンの関係は、ヒトを対象にした実験で衝動性が強い場合は線条体のドーパミンレベルが低いとわかっている。
+    ラットの場合、コカインを求めることが習慣化するには、側坐核がトリガーとなって背側線条体にドーパミンを放出できることが必要であると示されている。
+    また、下辺緑皮質が習慣の形成と維持に、前辺緑皮質が脅迫的な薬物使用の発生に中心的な役割を示している。
+    近年では目標指向行動と習慣的行動のバランスの乱れを依存症と捉えようとする動きが高まっている
+    この分野の研究は強化学習のモデルベース・モデルフリーの考え方に強い影響を受けており、依存症患者はモデルベース学習に頼る傾向が低く、モデルフリー学習に頼る傾向が高いことからも、二つのシステムのバランスの崩れを示唆している。
+    これまでの章の内容を修めてないと難しかった。要はバランスみたい話になってきたがなんでバランスが崩れてるのかやな。
