--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -35,3 +35,15 @@
     近年では目標指向行動と習慣的行動のバランスの乱れを依存症と捉えようとする動きが高まっている
     この分野の研究は強化学習のモデルベース・モデルフリーの考え方に強い影響を受けており、依存症患者はモデルベース学習に頼る傾向が低く、モデルフリー学習に頼る傾向が高いことからも、二つのシステムのバランスの崩れを示唆している。
     これまでの章の内容を修めてないと難しかった。要はバランスみたい話になってきたがなんでバランスが崩れてるのかやな。
+- date: 2025-05-04
+  bookTitle: 習慣と脳の科学
+  pages: 166 ~ 171
+  notes: |
+    人間の脳にもニューロンが過剰に刺激されないようにするための複雑なプロセスがあり、それが依存症が引き起こす禁断症状の鍵を握っている。
+    報酬系の外部では、ストレスに反応する視床下部・下垂体・副腎(HPA)軸が影響を受ける。
+    視床下部からコルチコトロピン放出因子(CRF)が放出されるが、報酬と感情に関わる多くの脳の領域に CRF 受容体があり、薬物に暴露することでストレス反応が増強されると考えられている。
+    また気分不快(ディスフォリア)と呼ばれるネガティブな感情状態は脳のオピオイド系の変化に関連している。
+    ストレスは報酬系と密接に結びついている。またストレスは前頭前野が行動を制御する能力を低下させ、習慣と目標指向行動の間のトレードオフの調整もしている。
+    依存症が習慣的行動だという従来の見解と違い、目標指向行動であると考える研究者が増えている。
+    目標指向行動への過度の依存が中毒性のある行動を引き起こす仕組みもいくつ考えられ、薬物が様々な脳のシステムに強力な影響を与えているので、習慣一つで説明するのは難しい。
+    ストレスが目標指向行動と習慣的行動のバランスを崩しているということもできそうだが、習慣の関与同様に複雑なシステムなのでそれだけではなさそうか。難しいなあ。
