--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -47,3 +47,16 @@
     依存症が習慣的行動だという従来の見解と違い、目標指向行動であると考える研究者が増えている。
     目標指向行動への過度の依存が中毒性のある行動を引き起こす仕組みもいくつ考えられ、薬物が様々な脳のシステムに強力な影響を与えているので、習慣一つで説明するのは難しい。
     ストレスが目標指向行動と習慣的行動のバランスを崩しているということもできそうだが、習慣の関与同様に複雑なシステムなのでそれだけではなさそうか。難しいなあ。
+- date: 2025-05-05
+  bookTitle: 習慣と脳の科学
+  pages: 171 ~ 178
+  notes: |
+    近年は食物に依存するヒトが増えている。肥満は環境や心理的要因だけでは説明できない複雑な現象である。
+    現代の食生活は進化の過程とは大きく異なり、人工調味料や化学物質を含む高糖度な超加工食品となっている。
+    米国国立衛生研究所(NIH)のケビン・ホールらの研究で、超加工食は非加工食よりも食事量と体重を増やす効果があるのがわかっている。
+    ポール・ジョンソンとポール・ケニーのラットの研究では食物にも依存性に似た行動を発現する事がわかっている。嗜好性が高くエネルギー密度の高い食事を与えると、食事量が増え肥満になるだけでなく、ドーパミン受容体の量が少なく報酬への反応性が低下した。砂糖中毒に関する研究もある。
+    食欲を刺激するグレリンはドーパミンの放出を促し、抑制するアディポカインレプチンはドーパミンニューロンの活動を低下させる。
+    しかし脳が薬物と食物の報酬に反応する方法には明確な違いがあり、一概にいえない。
+    また人間における食物の依存症については「制御できない摂食行動」としてより一般的な概念で理解できるという指摘がある。
+    制御できない摂食行動には前頭前野の活動、自制心の低さが関わっている。しかしそこから「逆推論」したとて他の多くの機能も前頭前野に関連しているため、それだけでは説明できず、制御できない摂食行動の脳内メカニズムを解明するにはさらなる研究を必要とする。
+    食生活の環境的な変化が影響していると言えそうだが詳しいことはわからんという感じか。難しいね。
