--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -60,3 +60,16 @@
     また人間における食物の依存症については「制御できない摂食行動」としてより一般的な概念で理解できるという指摘がある。
     制御できない摂食行動には前頭前野の活動、自制心の低さが関わっている。しかしそこから「逆推論」したとて他の多くの機能も前頭前野に関連しているため、それだけでは説明できず、制御できない摂食行動の脳内メカニズムを解明するにはさらなる研究を必要とする。
     食生活の環境的な変化が影響していると言えそうだが詳しいことはわからんという感じか。難しいね。
+- date: 2025-05-06
+  bookTitle: 習慣と脳の科学
+  pages: 178 ~ 182
+  notes: |
+    ティーンエイジャーや若者に見られるスマートフォンの過度な使用を依存症とすべきだという議論が広がっている。
+    スマートフォンの使用とドーパミンの関係は、外界の新奇さが一種の一般化された予測誤差として働くためだ。
+    しかしスマートフォンの利用と脳の構造や機能の関連性の根拠となる十分な情報の研究はまだない。
+    ギャンブル依存症という概念から生まれた行動嗜癖という概念がある。
+    行動嗜癖の悪影響が真の依存症のレベルに達すとみなすことに対し、依存症の分野の研究者はアレン・フランセスが「診断のインフレ」と呼ぶものを反映しているのではないかと懐疑的である。
+    例えばデジタルテクノロジーを使用する世代のメンタルヘルスの問題は、当然ながらその時代の変化等他にも原因がたくさんあると考えられる。
+    エイミー・オルベンとアンドリュー・プシビルスキによる大規模な研究では、デジタルテクノロジーの使用と心理的幸福との関係にわずかにネガティブな相関が見られたが、いじめ・薬物・眼鏡をかけて学校に行く等が及ぼす心理的幸福へのネガティブな影響よりはるかに低く、デジタルテクノロジーの悪影響を過大評価している可能性を示唆した。
+    しかし観察研究では因果関係の完全な特定が難しいことは留意すべきである。
+    新しい問題が現れたときに、確かに悪影響があるがその影響を過大評価しすぎてることはよくある。研究でも似たようなことがあるということかな。あと眼鏡の印象が悪いのはなんでだよｗ
