--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -73,3 +73,13 @@
     エイミー・オルベンとアンドリュー・プシビルスキによる大規模な研究では、デジタルテクノロジーの使用と心理的幸福との関係にわずかにネガティブな相関が見られたが、いじめ・薬物・眼鏡をかけて学校に行く等が及ぼす心理的幸福へのネガティブな影響よりはるかに低く、デジタルテクノロジーの悪影響を過大評価している可能性を示唆した。
     しかし観察研究では因果関係の完全な特定が難しいことは留意すべきである。
     新しい問題が現れたときに、確かに悪影響があるがその影響を過大評価しすぎてることはよくある。研究でも似たようなことがあるということかな。あと眼鏡の印象が悪いのはなんでだよｗ
+- date: 2025-05-07
+  bookTitle: 習慣と脳の科学
+  pages: 182 ~ 188
+  notes: |
+    試した人の 2/3 が依存症になるタバコを除き、他の薬物は平均すると最終的に依存症になる確率は 1 ~ 2 割と推定されている。
+    依存症になる一般的に挙げられる理由の自制心や意志力の弱さではその差を説明できない。
+    ただし自制心の一部、反応抑制の低さが薬物の実験的な使用から脅迫的な使用への移行に関連している可能性が示されている。
+    遺伝的要因は限定的で、パスコリらの研究では遺伝的にほぼ同一なマウスにも個体差があり、眼窩前頭皮質から線条体の中型有棘ニューロンへのシナプスの強さが忍耐力と関連していることが示された。
+    この個体差ランダムな要因によって起こるという考えがある。また環境要因としてストレスも関わりがある。
+    現在でも依存症を引き起こす生物学的なシステムはかなり解明されてるけどだからといって予測ができるわけではないと。諸々の要素それぞれに注意するしかないか。
