--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -83,3 +83,14 @@
     遺伝的要因は限定的で、パスコリらの研究では遺伝的にほぼ同一なマウスにも個体差があり、眼窩前頭皮質から線条体の中型有棘ニューロンへのシナプスの強さが忍耐力と関連していることが示された。
     この個体差ランダムな要因によって起こるという考えがある。また環境要因としてストレスも関わりがある。
     現在でも依存症を引き起こす生物学的なシステムはかなり解明されてるけどだからといって予測ができるわけではないと。諸々の要素それぞれに注意するしかないか。
+- date: 2025-05-08
+  bookTitle: 習慣と脳の科学
+  pages: 189 ~ 195
+  notes: |
+    第Ⅱ部 習慣を変えるには―行動変容の科学 第 7 章 新しい行動変容の科学に向けて
+    現代社会はドーパミン反応を引き起こす刺激に溢れ、前頭前野の中長期的な目標に沿って行動する能力はストレスや集中力の妨げられ、簡単には行動変容できない。
+    現代の先進国の成人の死因の殆どは現代病で、例えば喫煙者は心臓発作、がん、肺疾患のリスクが高く、行動変容の重要さがわかる。
+    しかし禁煙等の行動変容に関する研究は過去半世紀多く行われたが、 1 年間新しい習慣を持続できる人は常に 1/3 である。
+    生物学的な知識の高まりによる医療の発展に比べ、行動変容の成功率は著しくない。多くの心理学者は共通の理論でなくそれぞれ独自の理論を構築しようとする傾向がある。
+    最も広く受け入れられているトランスセオレティカルモデルは、行動変容の有効性を左右する脳や心理のメカニズムに触れておらず、提案されて 40 年近く効果的な治療法の開発に役立たなかった。
+    オレオレメソッドの提唱をするあたりは広義のプログラミングでも同じやな。
