--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -94,3 +94,10 @@
     生物学的な知識の高まりによる医療の発展に比べ、行動変容の成功率は著しくない。多くの心理学者は共通の理論でなくそれぞれ独自の理論を構築しようとする傾向がある。
     最も広く受け入れられているトランスセオレティカルモデルは、行動変容の有効性を左右する脳や心理のメカニズムに触れておらず、提案されて 40 年近く効果的な治療法の開発に役立たなかった。
     オレオレメソッドの提唱をするあたりは広義のプログラミングでも同じやな。
+- date: 2025-05-09
+  bookTitle: 習慣と脳の科学
+  pages: 195 ~ 198
+  notes: |
+    米国国立衛生研究所(NIH)で 2008 年頃に行動変容の基本的メカニズムの理解に取り組むための新しいプログラムの開発に実験医学的アプローチを提案、 2010 年から「高黄変用の科学(Science of Behavioral Change)」というプログラムが始まった。
+    実験医学的な考えを適用するために介入の標的を分類すると、環境・習慣・目標指向行動に分けられる。
+    以降の章では現在利用できるもの・将来可能になるものの説明。他の潜在的なメカニズムの社会的支援・コーピング技能・マインドセットには触れないとのことなので自習の対象としよう。
