--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -101,3 +101,14 @@
     米国国立衛生研究所(NIH)で 2008 年頃に行動変容の基本的メカニズムの理解に取り組むための新しいプログラムの開発に実験医学的アプローチを提案、 2010 年から「高黄変用の科学(Science of Behavioral Change)」というプログラムが始まった。
     実験医学的な考えを適用するために介入の標的を分類すると、環境・習慣・目標指向行動に分けられる。
     以降の章では現在利用できるもの・将来可能になるものの説明。他の潜在的なメカニズムの社会的支援・コーピング技能・マインドセットには触れないとのことなので自習の対象としよう。
+- date: 2025-05-10
+  bookTitle: 習慣と脳の科学
+  pages: 199 ~ 204
+  notes: |
+    第 8 章 成功に向けた計画―行動変容がうまくいくための鍵
+    行動を変えるのは簡単ではないが、神経科学・心理学・経済学等幅広い分野の研究から、すぐに利用できる方法・うまくいかない方法を知ることができる。 8 章では心理学から得られたアイデア示す。
+    行動経済学では環境によって選択を促されやすい・されにくくなる事実を選択構造という。ナッジとは選択構造を変えることで特定の行動を促すことで、行動変容に利用できる。
+    ただし習慣の定着を目的としたアンジェラ・ダックワースとケイティミルクマンの研究では、ナッジは行動変容に短期的な効果があることは示されたが、長期的に継続する効果はないことが示された。
+    人は合理的にみて利益の期待値が高くても損失の約 2 倍の利益が期待できないと行動しない損失回避という傾向がある。この傾向により、同じ結果でも表現によって異なった選択をしてしまうフレーミングという現象がある。
+    フレーミングは選択構造にとっても重要であると考えられるが、フレーミングが行動変容にどう貢献できるかについての研究はまだない。しかし選択肢を最適な方法でフレーミングすることで行動変容を改善できる可能性がある。
+    行動変容につながる選択を取りやすい環境を作るって感じよな。
