--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -112,3 +112,15 @@
     人は合理的にみて利益の期待値が高くても損失の約 2 倍の利益が期待できないと行動しない損失回避という傾向がある。この傾向により、同じ結果でも表現によって異なった選択をしてしまうフレーミングという現象がある。
     フレーミングは選択構造にとっても重要であると考えられるが、フレーミングが行動変容にどう貢献できるかについての研究はまだない。しかし選択肢を最適な方法でフレーミングすることで行動変容を改善できる可能性がある。
     行動変容につながる選択を取りやすい環境を作るって感じよな。
+- date: 2025-05-11
+  bookTitle: 習慣と脳の科学
+  pages: 204 ~ 210
+  notes: |
+    意思決定の失敗を防ぐために、自分の意志で選択できる感覚をなくす特定の行動を禁止するルールを設ける。
+    ゲルト・ギゲレンツァの研究による人が選択時に単純な意思決定戦略を用いるという事実から、ルールはできるだけシンプルな方が効果的だといえる。
+    習慣の強固な持続性に「価値駆動的な注意捕捉」のように容易に行動が引き起こされるためであり、その手掛かりの出現を環境を変えて防ぐアプローチが考えられる。
+    環境を変える中で過激だが効果的だと思われるのが住む場所を変えることであると考えられる。
+    チックは運動習慣を引き起こすのと同じ脳の機構が関与していると考えられており、チックの包括的行動介入(comprehensive behavioral intervention for tics CBIT)という治療法があり、標準的な治療法の 5 倍以上の効果があることが実証されている。
+    CBIT の成功からは、行動変容に幅広いアプローチを複数組み合わせる必要であり、大きな努力が必要であることから、行動変容の難しさを再確認させられる。
+    しかし難しい行動でもうまく変えられるという希望を与えてくれる。
+    引き続き環境の制限、あと CBIT は習慣のメタ認知って感じか。
