--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -124,3 +124,12 @@
     CBIT の成功からは、行動変容に幅広いアプローチを複数組み合わせる必要であり、大きな努力が必要であることから、行動変容の難しさを再確認させられる。
     しかし難しい行動でもうまく変えられるという希望を与えてくれる。
     引き続き環境の制限、あと CBIT は習慣のメタ認知って感じか。
+- date: 2025-05-12
+  bookTitle: 習慣と脳の科学
+  pages: 210 ~ 217
+  notes: |
+    マインドフルネス・瞑想は行動変容の欲求の抑制と実行制御の改善に効果をもたらすと考えられるが、その研究は質の低い研究や出版バイアスにより科学的な裏付けは乏しい。
+    自制心を向上する訓練も、メタアナリシスによって出版バイアスがあることがわかっており、バイアスを補正すると効果は基本的にゼロになるようだ。
+    認知的訓練の問題点として、訓練効果を他の状況に転移させるには同一要素の原則に従う必要があり、またその同一要素が極めて抽象的なため不可能であることが示唆されている。
+    いわゆる脳トレをテーマにした研究でも、訓練の効果が転移することはなく、また研究自体も質の低さが指摘されており、研究者自身もトレーニングプログラム開発に金銭的利害関係があるケースが多いという問題がある。
+    コンセンサス露文のタイトルに「ブームに注意せよ」とある通りやな...
