--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -133,3 +133,14 @@
     認知的訓練の問題点として、訓練効果を他の状況に転移させるには同一要素の原則に従う必要があり、またその同一要素が極めて抽象的なため不可能であることが示唆されている。
     いわゆる脳トレをテーマにした研究でも、訓練の効果が転移することはなく、また研究自体も質の低さが指摘されており、研究者自身もトレーニングプログラム開発に金銭的利害関係があるケースが多いという問題がある。
     コンセンサス露文のタイトルに「ブームに注意せよ」とある通りやな...
+- date: 2025-05-13
+  bookTitle: 習慣と脳の科学
+  pages: 217 ~ 222
+  notes: |
+    行動変容と抑制制御との関係は大規模試験でも肯定的な結果を示しておらず、訓練が実験室外で行動変容につながるかは診療試験で厳密に検証する必要があるだろう。
+    行動変容の根本的な問題として意図‐行動のギャップがある。実現のための「実行委と」として知られる if-then プランニングには行動変容の効果を向上させる多くの証拠がある。
+    大規模なメタアナリシスすでも計画が具体的になるほど効果が高まる可能性も示唆している。
+    計画を実行できない場合の誓約はコミットメントデバイスと呼ばれ行動変容を促す有効な手段であると考えられている。
+    また行動変容の成功を細かく自己監視することが役立つという研究結果もある。
+    ここまでの行動変容の手法は何十年にわたる研究の成果であり、次は神経科学に基づくアイデアに続く。
+    GitHub の Streak や booklog はまさに自己監視よなー、自分にはハマってると思ったが有効性が研究で示されてたのは裏付けがあって良い。
