--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -144,3 +144,13 @@
     また行動変容の成功を細かく自己監視することが役立つという研究結果もある。
     ここまでの行動変容の手法は何十年にわたる研究の成果であり、次は神経科学に基づくアイデアに続く。
     GitHub の Streak や booklog はまさに自己監視よなー、自分にはハマってると思ったが有効性が研究で示されてたのは裏付けがあって良い。
+- date: 2025-05-14
+  bookTitle: 習慣と脳の科学
+  pages: 223 ~ 226
+  notes: |
+    第 9 章 習慣をハックする―行動変容のための新たなツール
+    従来の行動変容の改善アプローチと違った、習慣のメカニズムを標的とした生物学的ターゲティングを可能にする神経科学のアプローチ。一部はまだ SFの領域。
+    長期的な記憶は記憶固定化と呼ばれる生物学的プロセスによって形成される。これはプロテインキナーゼが活性化されることから始まり、グルタミン酸受容体の効率性を変化させたりシナプスの感度を向上させ、また長期的にニューロン構造の変化にも関与する。
+    トッドサクタ―により発見された PKM-zeta(プロテインキナーゼ M ゼータ)は記憶の長期的な維持に関与しているようで、実験ではこの活動を阻害する ZIP という薬を投与されたラットは、嫌悪感を生じた記憶を失ったように見えた。
+    PKM-zeta を操作して悪い習慣の原因となる記憶を消去できる可能性は示されているが、標的とした脳の領域のすべての記憶が消されてしまう可能性が想定されるため、ピンポイントで特定の記憶を破壊できる可能性がある「再固定化」と呼ばれるアプローチに期待が高まっている。
+    フラッシュバックするような記憶は消せたらいいがついでに消える記憶が多いと流石に危ないし、他にも記憶の消去が人格形成を歪めたりしないのかとか色々気になる点はあるよな。
