--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -154,3 +154,14 @@
     トッドサクタ―により発見された PKM-zeta(プロテインキナーゼ M ゼータ)は記憶の長期的な維持に関与しているようで、実験ではこの活動を阻害する ZIP という薬を投与されたラットは、嫌悪感を生じた記憶を失ったように見えた。
     PKM-zeta を操作して悪い習慣の原因となる記憶を消去できる可能性は示されているが、標的とした脳の領域のすべての記憶が消されてしまう可能性が想定されるため、ピンポイントで特定の記憶を破壊できる可能性がある「再固定化」と呼ばれるアプローチに期待が高まっている。
     フラッシュバックするような記憶は消せたらいいがついでに消える記憶が多いと流石に危ないし、他にも記憶の消去が人格形成を歪めたりしないのかとか色々気になる点はあるよな。
+- date: 2025-05-15
+  bookTitle: 習慣と脳の科学
+  pages: 227 ~ 231
+  notes: |
+    1968 年、記憶の長期的な定着を阻害する薬剤でも、学習の数時間後には記憶の定着を妨げられないことが知られていた。2000 年のカリム・ネーダーとジョー・ルドゥーの研究により、過去の経験を思い出した直後であれば定着を阻害できることがわかった。
+    これは過去の経験を思い出すと記憶が不安定化し、維持のためにさらなるタンパク質合成が必要になることを示唆している。これを再固定化という。
+    再固定化は恐怖学習だけでなく、報酬関連の習慣でも同様のことが起こるのがわかっている。
+    記憶の定着を阻害するのは薬剤だけでなく、経験によっても阻害される可能性が示されているが、成功は記憶の想起から 10 分 ~ 1 時間後に処理した場合に限られている。
+    しかし人に対しての研究は比較的小規模であり大規模な検証が必要とされる。
+    再固定化は有望なものの、効果があるとする・ないとする研究の両方があり、さらなる検証が必要とされる。
+    文中にあるようなショック療法でなくても経験で記憶を上書きできるとしたらすごいことや。記憶のフラッシュバックでもきくのだろうか。
