--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -165,3 +165,14 @@
     しかし人に対しての研究は比較的小規模であり大規模な検証が必要とされる。
     再固定化は有望なものの、効果があるとする・ないとする研究の両方があり、さらなる検証が必要とされる。
     文中にあるようなショック療法でなくても経験で記憶を上書きできるとしたらすごいことや。記憶のフラッシュバックでもきくのだろうか。
+- date: 2025-05-16
+  bookTitle: 習慣と脳の科学
+  pages: 231 ~ 235
+  notes: |
+    アントワヌ・ベチャラの研究で島皮質を損傷した喫煙者の 2/3 が煙草をやめていたことを明らかにした。
+    島皮質の精神外科手術が依存症治療に有効かもしれない可能性があるが、心血管機能を始めとした様々な機能への悪影響の可能性から倫理的に認められる可能性は低い。
+    また ZIP のような記憶の固定化を阻害する薬剤の利用は、人で実証されたことがなく潜在的なリスクがあり、また一部の細胞に対しては有害である。
+    経頭蓋磁気刺激法(TMS)は一部のうつ病に有効であることが示されているが、比較的広範囲を対象にする限界や、一般的な治療法として採用するには検証が不十分な点がある。
+    人に対するオプトジェネティクスの検証は始まっているが、遺伝子組換えに伴う未知のリスク、外科手術によるリスクから、利用されるとしても極めて重篤なケースに限られるだろう。
+    またラットを用いた研究で得られた成果に対応する人の脳領域が正確にわからないことから、ヒトでの臨床試験は早くても数年先になる可能性が高い。
+    脳にデバイスを埋め込むとなるともうサイバーパンクなリスクを伴う印象たが、思ったより近づいてきてるねんな。
