--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -176,3 +176,14 @@
     人に対するオプトジェネティクスの検証は始まっているが、遺伝子組換えに伴う未知のリスク、外科手術によるリスクから、利用されるとしても極めて重篤なケースに限られるだろう。
     またラットを用いた研究で得られた成果に対応する人の脳領域が正確にわからないことから、ヒトでの臨床試験は早くても数年先になる可能性が高い。
     脳にデバイスを埋め込むとなるともうサイバーパンクなリスクを伴う印象たが、思ったより近づいてきてるねんな。
+- date: 2025-05-17
+  bookTitle: 習慣と脳の科学
+  pages: 235 ~ 240
+  notes: |
+    メチルフェニデート(リタリン)のような興奮剤が特に ADHD 患者の実行機能を改善することが研究で示されている。
+    興奮剤が ADHD 患者の実行制御を高め行動変容に影響を与える可能性があるが、健常者の認知機能への影響についてははっきりしない。
+    プレシジョンメディシン(精密医療)と呼ばれる個人レベルの正確な診断に基づく個別化した治療を行動変容に応用するにあたり、脳画像でバイオマーカーを特定するアプローチが関心を寄せられている。
+    また行動測定の組み合わせが行動変容の結果を予測するのに有用であることも示されている。
+    従来の臨床試験は誰もが同じように治療に反応すると仮定している問題があり、プレシジョンメディシンの分野では N-of1 臨床試験と呼ばれる個人に特化した試験が注目を集めているが、まだ少数の試験しか発表されておらず研究の質に対する批判もある
+    最初にゴルディロックスゾーンって副題があるのは、脳をちょうどいい塩梅に調整するために薬剤を利用するってことよな？
+    個々人のレベルに最適な状態にってのはアダプトゲンの働きと同じような感じか。アダプトゲンの方は有効性に？がついてるものも多いけど。
