--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -187,3 +187,12 @@
     従来の臨床試験は誰もが同じように治療に反応すると仮定している問題があり、プレシジョンメディシンの分野では N-of1 臨床試験と呼ばれる個人に特化した試験が注目を集めているが、まだ少数の試験しか発表されておらず研究の質に対する批判もある
     最初にゴルディロックスゾーンって副題があるのは、脳をちょうどいい塩梅に調整するために薬剤を利用するってことよな？
     個々人のレベルに最適な状態にってのはアダプトゲンの働きと同じような感じか。アダプトゲンの方は有効性に？がついてるものも多いけど。
+- date: 2025-05-18
+  bookTitle: 習慣と脳の科学
+  pages: 241 ~ 243
+  notes: |
+    第 10 章 エピローグ
+    人間は一般的に自分たちを取り巻く世界が殆ど変わらないものだと想定して生きているのは、習慣システムの進化をもたらしたと考えられる基本的な事実である。
+    COVID のような急激な世界の変化は、本書で紹介された習慣に対する考えの正しさを裏付けることになった。
+    それまでの行動を変えるのは容易ではなく、環境が習慣を変えるうえでどれほど強力かなのか、また人間が新しい状況にいかに速く適応できるかも示した。
+    この本は COVID の最中に書かれながら、 COVID が落ち着いて元の生活に戻ったときに新しい習慣が残る可能性を示唆していた。わたしには実際残ってるし、新しい習慣に馴染めず元に戻ったヒトも多くいて出社回帰してる所も多い(これはビジネス的な判断を多分に含むが)。
