--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -196,3 +196,11 @@
     COVID のような急激な世界の変化は、本書で紹介された習慣に対する考えの正しさを裏付けることになった。
     それまでの行動を変えるのは容易ではなく、環境が習慣を変えるうえでどれほど強力かなのか、また人間が新しい状況にいかに速く適応できるかも示した。
     この本は COVID の最中に書かれながら、 COVID が落ち着いて元の生活に戻ったときに新しい習慣が残る可能性を示唆していた。わたしには実際残ってるし、新しい習慣に馴染めず元に戻ったヒトも多くいて出社回帰してる所も多い(これはビジネス的な判断を多分に含むが)。
+- date: 2025-05-19
+  bookTitle: 習慣と脳の科学
+  pages: 241 ~ 248
+  notes: |
+    現代の人類が、脳の脆弱性をついた依存が起こり得る環境を生きていくうえで、行動変容は避けられない課題だ。
+    しかし、急速な神経科学・心理学的メカニズム解明の隆盛、行動変容についての研究に再現性があり一般化可能な状況が整ってきているため、行動変容の科学の未来は明るいといえる。
+    個人の行動変容の科学を社会に適用することが、人類の炭素集約型の活動に伴う気候問題のような危機的な状況を回避し、持続可能な社会を実現する最善策を理解することに繋がるのを願う。
+    これで終わり。良い本。習慣とそのメカニズムへの解像度は上がったと思う。再現性の問題を改善されてきたのはオープンサイエンスが関わってると。オープンアクセスに関してあ計算機科学だと [arXiv](https://arxiv.org/) がまさにそれか。
