--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -56,3 +56,6 @@
 - id: hard-to-break
   bookTitle: 習慣と脳の科学
   bookAuthor: Russel A. Poldrack, 神谷之康, 児島修
+- id: sandor-katzs-fermentation-journey
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  bookAuthor: Sandor Ellix Katz, 水原文
