--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -204,3 +204,11 @@
     しかし、急速な神経科学・心理学的メカニズム解明の隆盛、行動変容についての研究に再現性があり一般化可能な状況が整ってきているため、行動変容の科学の未来は明るいといえる。
     個人の行動変容の科学を社会に適用することが、人類の炭素集約型の活動に伴う気候問題のような危機的な状況を回避し、持続可能な社会を実現する最善策を理解することに繋がるのを願う。
     これで終わり。良い本。習慣とそのメカニズムへの解像度は上がったと思う。再現性の問題を改善されてきたのはオープンサイエンスが関わってると。オープンアクセスに関してあ計算機科学だと [arXiv](https://arxiv.org/) がまさにそれか。
+- date: 2025-05-20
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: i ~ xiii
+  notes: |
+    氏の旅や知人を通じて得た世界各地の発酵の技法と食品、その一部のレシピを紹介する本。
+    素材や技法は似ていても地域差があってそこに多様な文化があるという。レシピは完全なではなくて
+    氏が自身をジェネラリストであることが発酵実践者としての強みであると認識してるのは成る程な。
+    広範な知識と経験があるとそれらが関連付いて深化していくのは何事も同じか。
