--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -212,3 +212,16 @@
     素材や技法は似ていても地域差があってそこに多様な文化があるという。レシピは完全なではなくて
     氏が自身をジェネラリストであることが発酵実践者としての強みであると認識してるのは成る程な。
     広範な知識と経験があるとそれらが関連付いて深化していくのは何事も同じか。
+- date: 2025-05-21
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 0 ~ 14
+  notes: |
+    1 章 糖
+    糖の発酵でアルコールや酢を得るのは世界中のどこでも見られる。
+    パームワイン、プルケ、メスカルの節を読んだ。
+    パームワインはアフリカやアジアで作られる酒で、ココヤシの樹液を発酵させたもの。地域の呼び名があってビルマではトディー(toddy)という。
+    トディーは発酵が早いためを蒸留してアラック(arak)にすることで保存できるようにするが、中等のアラックとは別物。
+    プルケ(Pulque)とメスカル(Mezcal)はともにマゲイ(Agave americana 、 リュウゼツラン、アガベ)を原料にしたメキシコの酒。
+    マゲイから採取されたアグアミエルを発酵させてプルケを作る。メスカルはマゲイの株自体を焼いたあとパルプにし発酵＆蒸留して作る。テキーラはメスカルの一種で、 1 種類のマゲイからできていて製法も決まっている。
+    マゲイはプルケやメスカルを作り消費する以外にも生活や土壌の保護と結びついていて、文化的な重要性も持っている。
+    メスカルと言うとペヨーテを思い浮かべたが綴りが違った。
