Update the booklog.

--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -219,7 +219,7 @@
     1 章 糖
     糖の発酵でアルコールや酢を得るのは世界中のどこでも見られる。
     パームワイン、プルケ、メスカルの節を読んだ。
-    パームワインはアフリカやアジアで作られる酒で、ココヤシの樹液を発酵させたもの。地域の呼び名があってビルマではトディー(toddy)という。
+    パームワインはアフリカやアジアで作られる酒で、ヤシの樹液を発酵させたもの。地域の呼び名があってビルマではトディー(toddy)という(調べたところシュロの樹液から作るようだ)。
     トディーは発酵が早いためを蒸留してアラック(arak)にすることで保存できるようにするが、中等のアラックとは別物。
     プルケ(Pulque)とメスカル(Mezcal)はともにマゲイ(Agave americana 、 リュウゼツラン、アガベ)を原料にしたメキシコの酒。
     マゲイから採取されたアグアミエルを発酵させてプルケを作る。メスカルはマゲイの株自体を焼いたあとパルプにし発酵＆蒸留して作る。テキーラはメスカルの一種で、 1 種類のマゲイからできていて製法も決まっている。
