--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -225,3 +225,14 @@
     マゲイから採取されたアグアミエルを発酵させてプルケを作る。メスカルはマゲイの株自体を焼いたあとパルプにし発酵＆蒸留して作る。テキーラはメスカルの一種で、 1 種類のマゲイからできていて製法も決まっている。
     マゲイはプルケやメスカルを作り消費する以外にも生活や土壌の保護と結びついていて、文化的な重要性も持っている。
     メスカルと言うとペヨーテを思い浮かべたが綴りが違った。
+- date: 2025-05-22
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 15 ~ 31
+  notes: |
+    ウンブリア州のワイン作り、地方の慣習が商業規格で流通しなくなるというのは、日本でも道の駅で買えなくなった漬物の話と同じか。
+    メキシコのテパチェ(Tepache)と中南米のグアラポ・デ・ピーニャ(Guarapo de pina)ははパイナップルから作る。
+    カリブ海のモービー(mauby)は木の樹皮・根幹・スパイスと砂糖で作る。柿酢はその果肉を漬け床にすることができる。
+    フルーツ酵素過激派は酵素が全てを解決すると思ってるが氏はそう簡単ではないというスタンスで良かった。
+    蜂蜜から作られるミードには植物性の風味が漬けられることが多い、ターメリックのミードもそのバリエーション。
+    糖の発酵はバックスロッピングするものもあるが、どれも原材料が自然と発酵を始め、絶えず発酵が続きアルコールから酢に変わる。
+    そういう点でもプリミティブなんやろな。
