--- a/contents/booklogs/2025/2025-05.yml
+++ b/contents/booklogs/2025/2025-05.yml
@@ -236,3 +236,16 @@
     蜂蜜から作られるミードには植物性の風味が漬けられることが多い、ターメリックのミードもそのバリエーション。
     糖の発酵はバックスロッピングするものもあるが、どれも原材料が自然と発酵を始め、絶えず発酵が続きアルコールから酢に変わる。
     そういう点でもプリミティブなんやろな。
+- date: 2025-05-23
+  bookTitle: サンダー・キャッツの発酵の旅 世界中を旅して見つけたレシピ、技術、そして伝統
+  pages: 32 ~ 46
+  notes: |
+    2 章 野菜
+    野菜の発酵はプロセスがわかりやすく本質的に安全で比較的優れた効果を得られるため最初に手掛けるのに向いている。
+    この章では塩漬け発酵の起源と考えられる中国をはじめ世界各地の手法を紹介し、塩を使わない日本のすんき漬けや発酵野菜を乾かす実験的アプローチを紹介している。
+    氏が発酵を始めた現実的な理由は菜園の収穫。前に読んだピクルスと漬物の歴史でも中国が塩漬けの起源で紀元前 11 ~ 7 世紀には既に見られたとあったな。
+    成都なので四川と雲南省のパオツァイ。成都の作り手のこだわりは麦芽糖に叮叮糖を使うこと。
+    Wikipedia を見るに香港の駄菓子みたい。雲南省の作りては野菜を日干しし糖類を添加しない。
+    貴州の重湯漬けは炒ったもち米の煮汁につける。
+    産膜酵母が張ってても気にせず混ぜ込むシェフ、まあそうするよなというのはわかるが産膜酵母が張ったあとの味はあまり好きじゃない。
+    People's Republic of Fermentation は暇なときに見よう。
